测试deployment/nginx-deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v3
  labels:
    app: nginx
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
        version: v3
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-v3
              mountPath: "/usr/share/nginx/html"
      volumes:
        - name: nginx-v3
          configMap:
            name: nginx-v3
